--- a/feedPage/src/styles/Sidebar.module.css
+++ b/feedPage/src/styles/Sidebar.module.css
@@ -17,7 +17,7 @@
 }
 
 .sidebar footer{
-    border-top: 1px solid var(--grey-600);
+    border-top: 1px solid var(--gray-600);
     margin-top: 1.5rem;
     padding: 1.5rem 2rem 2rem;
 }
