--- a/feedPage/src/styles/Sidebar.module.css
+++ b/feedPage/src/styles/Sidebar.module.css
@@ -36,8 +36,7 @@
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
-    transition: color 0.5s;
-    background-color: 0.5s;
+    transition: color 0.5s, background-color 0.5s;
 }
 
 .sidebar footer a:hover{
