--- a/feedPage/src/styles/Post.module.css
+++ b/feedPage/src/styles/Post.module.css
@@ -58,7 +58,7 @@
     width: 100%;
     margin-top: 1.5rem;
     padding-top: 1.5rem;
-    border-top: 1px solid var(--gray-900);
+    border-top: 1px solid var(--gray-600);
 }
 
 .commentForm > strong{
@@ -71,8 +71,8 @@
     background: var(--gray-900);
     border: 0;
     resize: none;
-    height: 1.6;
-    padding: 1 rem;
+    height: 6rem;
+    padding: 1rem;
     border-radius: 8px;
     color: var(--gray-100);
     line-height: 1.4;
