--- a/feedPage/src/styles/Comment.module.css
+++ b/feedPage/src/styles/Comment.module.css
@@ -22,7 +22,7 @@
 
 .commentContent header{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
 }
 
@@ -80,6 +80,6 @@
 }
 
 .commentBox footer button span::before{
-    content: "\2023";
+    content: "\2022";
     padding: 0 0.25rem;
 }
