--- a/feedPage/src/styles/Post.module.css
+++ b/feedPage/src/styles/Post.module.css
@@ -104,3 +104,12 @@
     visibility: visible;
     max-height: none;
 }
+
+.commentForm button[type='submit']:not(:disabled):hover{
+    background: var(--gray-300);
+}
+
+.commentForm button[type='submit']:disabled{
+    opacity: 0.7;
+    cursor: not-allowed;
+}
